# bump

./: .vampus.yml  Cargo.toml  README.md  bump.yml
src/: cli.rs  config.rs  main.rs  utils.rs
